# Native-GPT

./: .gitignore  AgentGPT_Desktop_Detailed_Implementation_Plan_Updated.md  Cargo.toml  LICENSE  README.md  agentgpt-critical-thinking-tool.md  native-gpt.bat  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  soak.yml
apps/agent-runtime/: README.md  pyproject.toml
apps/agent-runtime/src/agentgpt_runtime/: __init__.py  __main__.py  approvals.py  chat.py  endpoints.py  mcp_servers.py  protocol.py  run_context.py  server.py  thinking.py
apps/agent-runtime/src/agentgpt_runtime/orchestration/: __init__.py  budgets.py  coordinator.py  critic.py  prompts.py  reviewer.py  schemas.py  state_machine.py  synthesizer.py  workers.py
apps/agent-runtime/src/agentgpt_runtime/tools/: __init__.py  factory.py  registry.py
apps/agent-runtime/tests/: conftest.py  test_approvals.py  test_chat.py  test_chat_stream.py  test_chat_tools.py  test_endpoints.py  test_factory_tool.py  test_mcp_servers.py  test_orchestration.py  test_protocol.py  test_sidecar.py  test_thinking.py  test_thinking_contract.py  test_tools.py
apps/bridge/: README.md  deploy-linux.sh  pyproject.toml  run-bridge.sh
apps/bridge/openvoice_worker/: __init__.py  __main__.py
apps/bridge/src/agentgpt_bridge/: __init__.py  __main__.py  app.py  auth.py  config.py  manager.py  mcp_server.py  ops.py
apps/bridge/src/agentgpt_bridge/workloads/: __init__.py  base.py  comfyui.py  fake.py  openvoice.py
apps/bridge/tests/: test_api.py  test_mcp.py  test_workload_lifecycle.py
apps/host/src-tauri/: Cargo.toml  tauri.conf.json
apps/host/src-tauri/capabilities/: desktop-window-controls.json
apps/host/src-tauri/frontend/: index.html
apps/host/src-tauri/icons/: generate_icons.py
apps/host/src-tauri/src/: lib.rs  main.rs
apps/ui/: index.html  package.json  tsconfig.json  vite.config.ts
apps/ui/scripts/: generate-icons.mjs
apps/ui/src/: App.tsx  index.css  main.tsx
crates/secure-store/: Cargo.toml
crates/secure-store/src/: lib.rs
crates/server/: Cargo.toml
crates/server/migrations/: 0001_endpoints.sql  0002_phase3.sql  0003_app_hub.sql  0004_tool_events.sql  0005_project_knowledge.sql  0005_remote_hosts.sql  0006_generated_assets.sql  0006_remote_hosts.sql  0007_generated_assets.sql  0007_voices.sql  0008_voices.sql  0009_browser.sql  0010_thinking_params.sql  0011_agent_intelligence.sql
crates/server/src/: analytics.rs  assets.rs  auth.rs  bridge.rs  chat.rs  db.rs  defaults.rs  endpoints.rs  error.rs  events.rs  handlers.rs  knowledge.rs  lib.rs  mcp_servers.rs  net.rs  phase3.rs  protocol.rs  relay.rs  remote_hosts.rs  secrets.rs  state.rs  tools.rs  updates.rs  ws.rs
crates/server/src/browser/: cdp.rs  chromium.rs  component.rs  downloads.rs  input.rs  manager.rs  mod.rs  model_proxy.rs  page_agent_hub.rs  permissions.rs  profile.rs  protocol.rs  screencast.rs
crates/supervisor/: Cargo.toml
crates/supervisor/src/: lib.rs  protocol.rs
crates/supervisor/tests/: roundtrip.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
docs/architecture/: ADR-0001-tauri-axum-hybrid.md  ADR-0002-python-sidecar-stdio.md  ADR-0003-tailscale-binding-token-auth.md  ADR-0004-lazy-sidecar-lifecycle.md  ADR-0005-base-ui-over-radix.md  ADR-0006-rusqlite-bundled.md  ADR-0007-protocol-types-handwritten.md  ADR-0008-remote-backend-host.md  ADR-0009-embedded-browser-page-agent.md
scripts/: dev.sh  setup-browser.py  test_setup_browser.py
skills/critical-thinking/: SKILL.md  skill.json
skills/plan-execute-verify/: SKILL.md  skill.json
tests/integration/: ws_roundtrip.mjs  ws_roundtrip.sh
tests/soak/: rss_soak.sh
tools/: README.md  conftest.py
tools/_lib/: bridge_client.py  context.py  db.py  paths.py  secrets_scan.py  test_lib_paths.py  test_vectorize.py  testdb.py  testloader.py  vectorize.py  web_safety.py
tools/apply-patch/: manifest.json  test_apply_patch.py  tool.py
tools/artifacts/: manifest.json  test_artifacts.py  tool.py
tools/attachments/: manifest.json  test_attachments.py  tool.py
tools/browser/: manifest.json  test_browser.py  tool.py
tools/calculate/: manifest.json  test_calculate.py  tool.py
tools/comfyui-generate/: manifest.json  test_comfyui_generate.py  tool.py
tools/create-directory/: manifest.json  test_create_directory.py  tool.py
tools/current-time/: manifest.json  tool.py
tools/delete-file/: manifest.json  test_delete_file.py  tool.py
tools/dev-tools/: manifest.json  test_dev_tools.py  tool.py
tools/fs-extensions/: manifest.json  test_fs_extensions.py  tool.py
tools/git-tools/: manifest.json  test_git_tools.py  tool.py
tools/goal-supervisor/: manifest.json  test_goal_supervisor.py  tool.py
tools/knowledge/: manifest.json  test_knowledge.py  tool.py
tools/list-files/: manifest.json  test_list_files.py  tool.py
tools/memory/: manifest.json  test_memory.py  tool.py
tools/move-file/: manifest.json  test_move_file.py  tool.py
tools/notifications/: manifest.json  test_notifications.py  tool.py
tools/openvoice-register-voice/: manifest.json  tool.py
tools/openvoice-tts/: manifest.json  test_openvoice_tts.py  tool.py
tools/python-execute/: manifest.json  test_python_execute.py  tool.py
tools/read-file/: manifest.json  test_read_file.py  tool.py
tools/remote-host-status/: manifest.json  test_remote_host_status.py  tool.py
tools/search-files/: manifest.json  test_search_files.py  tool.py
tools/shell-execute/: manifest.json  test_shell_execute.py  tool.py
tools/skills/: manifest.json  test_skills.py  tool.py
tools/todo-list/: manifest.json  test_todo_list.py  tool.py
tools/tool-router/: manifest.json  test_tool_router.py  tool.py
tools/utilities/: manifest.json  test_utilities.py  tool.py
tools/web-fetch/: manifest.json  test_web_fetch.py  tool.py
tools/web-http/: manifest.json  test_web_http.py  tool.py
tools/web-search/: manifest.json  test_web_search.py  tool.py
tools/write-file/: manifest.json  test_write_file.py  tool.py
(+87 files in other folders)
