[workspace]
resolver = "2"
members = [
    "apps/host/src-tauri",
    "crates/server",
    "crates/supervisor",
    "crates/secure-store",
    "crates/telemetry",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Internal crates
agentgpt-server = { path = "crates/server" }
agentgpt-supervisor = { path = "crates/supervisor" }
agentgpt-secure-store = { path = "crates/secure-store" }
agentgpt-telemetry = { path = "crates/telemetry" }

# External crates
tokio = { version = "1.53", features = ["full"] }
tokio-tungstenite = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs"] }
futures-util = { version = "0.3", features = ["sink"] }
http-body-util = "0.1"
dashmap = "6"
sysinfo = "0.39"
keyring = "4.1"
qrcode = "0.14"
if-addrs = "0.15"
rand = "0.9"
rusqlite = { version = "0.40", features = ["bundled"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
tauri = "2.11"
tauri-build = "2.6"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
