[project]
name = "agentgpt-runtime"
version = "0.1.0"
description = "Python agent-runtime sidecar for AgentGPT Desktop (NDJSON over stdio)"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pydantic>=2.13,<3",
    "psutil>=7,<8",
    "jsonschema>=4.26,<5",
    "httpx>=0.28,<1",
    "openai>=2.0,<3",
    # Mandated agent SDK. Lazily imported (never at startup) to keep startup fast.
    "strands-agents>=1.48,<2",
    "tzdata>=2025.2",
    # Web/fetch tool dependencies. bs4 + lxml power the markdown/text extraction
    # in tools/web-fetch; ddgs backs tools/web-search (no API key required).
    "beautifulsoup4>=4.13,<5",
    "lxml>=6,<7",
    "ddgs>=9,<10",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "ruff>=0.14,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentgpt_runtime"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests", "../../tools"]
asyncio_mode = "auto"
