[package]
name = "agentgpt-secure-store"
description = "OS keychain wrapper (keyring) with env-var fallback"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
keyring.workspace = true
thiserror.workspace = true
tracing.workspace = true
