[package]
name = "agentgpt-server"
description = "Embedded axum HTTP + WebSocket server for the AgentGPT host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
agentgpt-secure-store.workspace = true
agentgpt-supervisor.workspace = true
agentgpt-telemetry.workspace = true
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
futures-util.workspace = true
if-addrs.workspace = true
qrcode.workspace = true
rand.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tokio-tungstenite.workspace = true
