[package]
name = "agentgpt-supervisor"
description = "Python sidecar process supervisor speaking NDJSON over stdio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
agentgpt-telemetry.workspace = true
chrono.workspace = true
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
